--- a/src/pages/info/navbar/navbar.css
+++ b/src/pages/info/navbar/navbar.css
@@ -9,11 +9,11 @@ header{
     background-color: white;
 }
 
-.header_shadow{
+.header-shadow{
     box-shadow: 0 0 10px rgba(0, 0, 0, .5);
 }
 
-.mob_nav_drop_div{
+.mob-nav-drop-div{
     position: fixed;
     height: 280px;
     top: -220px;
@@ -31,7 +31,7 @@ header{
     transition: all 300ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
 }
 
-.nav_logo{
+.nav-logo{
     display: block;
     width: 44px;
     height: 44px;
@@ -39,7 +39,7 @@ header{
     margin: 8px 20px 0 20px;
 }
 
-.nav_btn{
+.nav-btn{
     float: left;
     margin-left: 30px;
     height: 58px;
@@ -51,11 +51,11 @@ header{
     border-bottom: 2px solid rgba(0,0,0, 0);
 }
 
-.nav_btn:not(.nav_btn_active):hover{
+.nav-btn:not(.nav-btn-active):hover{
     border-bottom: 2px solid #0652DD55;
 }
 
-.nav_btn_active{
+.nav-btn-active{
     color: black;
     border-bottom: 2px solid #0652DD;
 }
@@ -69,7 +69,7 @@ header{
     font-size: 22px;
 }
 
-.expend_btn{
+.expend-btn{
     float: right;
     width: 40px;
     height: 40px;
@@ -81,7 +81,7 @@ header{
     background-image: url("/expand_btn.svg");
 }
 
-.mobile_nav_btn{
+.mobile-nav-btn{
     display: block;
     text-align: center;
     line-height: 45px;
@@ -98,12 +98,12 @@ header{
     font-size: 20px;
 }
 
-.mobile_nav_btn:not(.mobile_nav_btn_active):hover{
+.mobile-nav-btn:not(.mobile-nav-btn-active):hover{
     background-color: #0652DD55;
 }
 
 
-.mobile_nav_btn_active{
+.mobile-nav-btn-active{
     color: white;
     background-color: #0652DD;
 }
