--- a/src/pages/welcome/welcome.css
+++ b/src/pages/welcome/welcome.css
@@ -1,12 +1,12 @@
-.logo_svg {
+.logo-svg {
     position: absolute;
 }
 
-.egasis_svg {
+.egasis-svg {
     position: absolute;
 }
 
-.red_btn {
+.red-btn {
     position: absolute;
     width: 150px;
     height: 40px;
@@ -29,13 +29,22 @@
     transition-duration: 0.6s;
 }
 
-.red_btn:active {
+.red-btn:active {
     -webkit-transition-duration: 0.05s;
     transition-duration: 0.05s;
     transform: scale(0.95);
 }
 
-.red_btn:hover {
+.red-btn:hover {
     color: white;
     background-position: right;
+}
+
+.white-bg {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: white;
+    top: 0;
+    left: 0;
 }
