--- a/src/pages/info/projects/az/projectCard.css
+++ b/src/pages/info/projects/az/projectCard.css
@@ -66,19 +66,16 @@
     color: #161616;
 }
 
-.colored-btn {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-}
-
 .fill {
     background-color: transparent;
     box-shadow: none;
     min-height: 0;
 }
 
-.colored-btn {
+.colored-btn-project-card {
+    position: absolute;
+    bottom: 0;
+    right: 0;
     margin: 15px 20px 13px;
     padding: 10px 15px;
 
