--- a/src/pages/info/projects/az/projectCard.css
+++ b/src/pages/info/projects/az/projectCard.css
@@ -66,10 +66,14 @@
     color: #161616;
 }
 
-.fill {
+.project-card-fill {
     background-color: transparent;
     box-shadow: none;
     min-height: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .colored-btn-project-card {
