--- a/src/pages/info/navbar/navbar.css
+++ b/src/pages/info/navbar/navbar.css
@@ -1,4 +1,4 @@
-.mob-nav-drop-div{
+.mob-nav-drop-div {
     position: fixed;
     height: 280px;
     top: -220px;
@@ -16,7 +16,7 @@
     transition: all 300ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
 }
 
-.nav-logo{
+.nav-logo {
     display: block;
     width: 44px;
     height: 44px;
@@ -24,7 +24,7 @@
     margin: 8px 20px 0 20px;
 }
 
-.nav-btn{
+.nav-btn {
     float: left;
     margin-left: 30px;
     height: 58px;
@@ -32,19 +32,19 @@
 
     font-size: 15px;
     color: #777;
-    border-bottom: 2px solid rgba(0,0,0, 0);
+    border-bottom: 2px solid rgba(0, 0, 0, 0);
 }
 
-.nav-btn:not(.nav-btn-active):hover{
+.nav-btn:not(.nav-btn-active):hover {
     border-bottom: 2px solid #0652DD55;
 }
 
-.nav-btn-active{
+.nav-btn-active {
     color: black;
     border-bottom: 2px solid #0652DD;
 }
 
-.title{
+.title {
     display: inline;
     float: left;
     margin: 18px 0 0;
@@ -53,7 +53,7 @@
     font-size: 22px;
 }
 
-.expend-btn{
+.expend-btn {
     float: right;
     width: 40px;
     height: 40px;
@@ -65,7 +65,7 @@
     background-image: url("/expand_btn.svg");
 }
 
-.mobile-nav-btn{
+.mobile-nav-btn {
     display: block;
     text-align: center;
     line-height: 45px;
@@ -81,12 +81,22 @@
     font-size: 20px;
 }
 
-.mobile-nav-btn:not(.mobile-nav-btn-active):hover{
+.mobile-nav-btn:not(.mobile-nav-btn-active):hover {
     background-color: #0652DD55;
 }
 
 
-.mobile-nav-btn-active{
+.mobile-nav-btn-active {
     color: white;
     background-color: #0652DD;
+}
+
+.mobile-nav-overlay {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    z-index: 997;
+
+    -webkit-transition: all 300ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+    transition: all 300ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
 }
