double click to jump animation

--- a/src/pages/welcome/welcome.css
+++ b/src/pages/welcome/welcome.css
@@ -1,9 +1,11 @@
 .logo-svg {
     position: absolute;
+    pointer-events: none;
 }
 
 .egasis-svg {
     position: absolute;
+    pointer-events: none;
 }
 
 .red-btn {
