--- a/src/pages/common.css
+++ b/src/pages/common.css
@@ -17,7 +17,7 @@ a {
     padding-top: 60px;
 }
 
-.site-width{
+.site-width {
     margin-right: auto;
     margin-left: auto;
     padding-right: 3%;
@@ -26,7 +26,7 @@ a {
     max-width: 1000px;
 }
 
-header{
+header {
     position: fixed;
     height: 60px;
     top: 0;
@@ -37,7 +37,7 @@ header{
     background-color: white;
 }
 
-.header-shadow{
+.header-shadow {
     box-shadow: 0 0 10px rgba(0, 0, 0, .5);
 }
 
@@ -48,4 +48,10 @@ header{
     padding-left: 30px;
 
     max-width: 1000px;
+}
+
+img {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    user-select: none;
 }
