--- a/src/pages/info/project/projectPage.css
+++ b/src/pages/info/project/projectPage.css
@@ -71,12 +71,20 @@
     color: #3b6ba6;
 }
 
+.project-page .longdesc code {
+    font-family: monospace;
+    font-size: 90%;
+    padding: 2px 4px;
+    background-color: rgba(255, 255, 255, .7);
+    border-radius: 6px;
+}
+
 .project-page .screenshots {
     overflow: auto;
     white-space: nowrap;
 }
 
-.project-page .screenshots > .screenshot {
+.project-page .screenshots > a > .screenshot {
     margin-top: 25px;
     margin-right: 10px;
 
